@@ -4,6 +4,7 @@ Revision 0.2.8, released XX-XX-2019
 
 - Improve test routines for modules that use certificate extensions
 - Added RFC7633 providing TLS Features Certificate Extension
+- Added RFC7229 providing OIDs for Test Certificate Policies
 
 Revision 0.2.7, released 09-10-2019
 -----------------------------------
